# embark

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
.github/workflows/: tauri-release.yml
docs/plans/: 2026-03-12-backend-implementation.md
scripts/: generate-icon.mjs
server/: package-lock.json  package.json
server/src/: index.ts
server/src/db/: schema.ts
server/src/lib/: pagination.ts
server/src/middleware/: auth.ts  cfAccess.ts
server/src/routes/: auth.ts  automations.ts  buds.ts  clients.ts  forms.ts  gamification.ts  services.ts  studio.ts  studioComments.ts  studioHistory.ts  tags.ts  teams.ts  templates.ts  users.ts  webhooks.ts
server/src/ws/: y-websocket.d.ts  yjsHandler.ts
src/: App.tsx  index.css
src-tauri/: .tauri-private.key.pub  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/AI/: AICenter.tsx  MentionInput.tsx
src/components/Auth/: LoginPage.tsx  RegisterPage.tsx
src/components/Checklist/: ChecklistItem.tsx
src/components/Clients/: CSVImporter.tsx  ClientCard.tsx  ClientDetail.tsx  ClientList.tsx  HealthSparkline.tsx
src/context/: AuthContext.tsx  ClientContext.tsx
src/hooks/: useClientsAPI.ts  useContextMenu.ts  useDeepLinks.ts  useHealthHistory.ts  usePresence.ts  useStudio.ts  useStudioTemplates.ts
src/lib/: api.ts  platform.ts
src/types/: index.ts
src/utils/: emailImport.ts  export.ts  migrateLocalStorage.ts  studioHelpers.ts
(+54 files in other folders)
